@@ -17,6 +17,10 @@ SHA1 for RSASHA1, and so on.
 
 .SH OPTIONS
 .TP
+\fB-f\fR
+Ignore SEP flag (i.e. make DS records for any key)
+
+.TP
 \fB-n\fR
 Write the result DS Resource Record to stdout instead of a file
 
