@@ -71,7 +71,7 @@ main(int argc, char *argv[])
 	random = NULL;
 	ksk = false; /* don't create a ksk per default */
 
-	while ((c = getopt(argc, argv, "a:kb:r:v25")) != -1) {
+	while ((c = getopt(argc, argv, "a:kb:r:v")) != -1) {
 		switch (c) {
 		case 'a':
 			if (algorithm != 0) {
