@@ -22,6 +22,10 @@ that is not of type NSEC, NSEC3, RRSIG or DNSKEY. DS records are not
 printed.
 
 .TP
+\fB-b\fR
+Include Bubble Babble encoding of DS's.
+
+.TP
 \fB-0\fR
 Print a (null) for the RRSIG inception, expiry and key data. This option
 can be used when comparing different signing systems that use the same
