@@ -18,6 +18,10 @@ The resulted zone file is printed to standard output.
 .B -o ORIGIN
 use ORIGIN when reading in the zone
 
+.TP
+.B -v
+show the version number and exit
+
 .SH AUTHOR
 Written by the ldns team as an example for ldns usage.
 
