@@ -27,6 +27,10 @@ use ORIGIN as origin when reading the zonefile.
 .B -z
 Sort the zone before splitting.
 
+.TP
+.B -v
+Show version number and exit.
+
 .SH AUTHOR
 Written by the ldns team as an example for ldns usage.
 
